--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fontsource/onest": "^5.2.11",
     "@tailwindcss/vite": "^4.1.13",
     "astro": "^5.13.10",
+    "flowbite": "^3.1.2",
     "tailwindcss": "^4.1.13"
   }
 }
